@@ -1,3 +1,7 @@
+- bootloader-config:
+  o never use "vmlinuz-desktop" or "initrd-desktop.img", always use "vmlinuz"
+    or "initrd.img" (#35721)
+
 Version 10.6.11 - 31 January 2008
 
 - drakbug:
